--- a/.rvmrc
+++ b/.rvmrc
@@ -1,10 +1,1 @@
-#!/bin/bash
-if [ -e '.rvmrc_custom' ]; then
-  source .rvmrc_custom;
-else
-  rvm --create use ree-1.8.7-2011.03@diaspora
-fi
-
-if [ "$(gem --version)" != "1.8.12" ]; then
-  rvm rubygems 1.8.12
-fi
+rvm use ree-1.8.7-2011.12@diaspora
